--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -5,5 +5,6 @@ jobs:
     name: Build on Ubuntu 16.04 (Xenial)
     runs-on: ubuntu-16.04
     steps:
+    - uses: actions/checkout@v1
     - name: run build script
       run: cd $GITHUB_WORKSPACE && ./scripts/ubuntu-xenial_e2e-build.sh
