--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -30,3 +30,11 @@ jobs:
         path: osmv
     - name: run build script
       run: cd $GITHUB_WORKSPACE && ./osmv/scripts/debian-buster_e2e-build.sh
+
+  mac:
+    name: Build on Mac (catalina)
+    runs-on: macos-10.15
+    steps:
+    - uses: actions/checkout@v2
+    - name: run build script
+      run: cd $GITHUB_WORKSPACE && ./scripts/mac_catalina_10-15_build.sh
