--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -10,6 +10,10 @@ jobs:
       run: |
         cd $env:GITHUB_WORKSPACE
         scripts\\windows_e2e-build.bat || exit /b
+    - uses: actions/upload-artifact@v2
+      with:
+        name: windows_installer.zip
+        path: osmv-build/*.exe
 
   ubuntu1604:
     name: Build on Ubuntu 16.04 (Xenial)
