--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -50,6 +50,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: run build script
       run: cd $GITHUB_WORKSPACE && ./scripts/mac_catalina_10-15_build.sh
+    - uses: actions/upload-artifact@v2
+      with:
+        name: mac_catalina_installer.zip
+        path: osmv-build/*.dmg
 
   macBigSur:
     name: Build on Mac (big sur)
