Stubbed out a model editor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,8 @@ add_executable(osmv
     src/loading_screen.cpp
     src/imgui_demo_screen.hpp
     src/imgui_demo_screen.cpp
+    src/model_editor_screen.hpp
+    src/model_editor_screen.cpp
     src/splash_screen.hpp
     src/splash_screen.cpp
 
